2006-02-10  Per Bothner  <per@bothner.com>

	* kawa/standard/syntax_case.java (rewriteClauses): Fix to use
	correct PrimProcedure constructor, taking a Language.

2006-02-09  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody): No longer need to
	mustCompleHere.

	* kawa/lang/Eval.java (evalBody): Use new pushNewModule method.

	* kawa/standard/map.java (inline): Use existing IsEq from Scheme.

2006-02-07  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme): The R5RS functions
	integer?, max, min, gcd, lcm, logand, logior, logxor are now
	implemented in Scheme in kawa.lib.numbers.
	(define_proc): Remove two no-longer-needed methods.
	* kawa/standard/gcd.java: Remove no-longer-needed file.
	* kawa/standard/integer_p.java: Likewise.
	* kawa/standard/lcm.java: Likewise.
	* kawa/standard/logand.java: Likewise.
	* kawa/standard/logior.java: Likewise.
	* kawa/standard/logxor.java: Likewise.
	* kawa/standard/max.java: Likewise.
	* kawa/standard/min.java: Likewise.
	* Makefile.am: Update accordingly.

2006-02-06  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair): Update checking for xml
	namespaces to match namespace changes.
	(namespaceResolve, namespaceRewriteResolve): New/rewritten methods.
	(scanForm): Do namespaceRewriteResolve first.
	* kawa/standard/Scheme.java (applyToArgs, setApplyToArgs,
	applyFieldDecl): New static fields.
	(makeApply): New method, overrides LispLanguage.
	(createReadTable): Change postfixLookupOperator to ':'.
	* kawa/standard/define.java (scanForm): Some changes to handle
	namespace resolution.  Set type of functions to Procedure.
	* kawa/standard/export.java (scanForDefinitions): Since namespace
	prefixes are now in the regular namespace, we no longer need
	to export 'namespace:PREFIX'.
	* kawa/standard/location.java (makeProcLocation$V): Remove needless
	ApplyToArgs application.
	* kawa/standard/set_b.java (rewriteForm): Check for ApplyToArgs.
