@@ -1,5 +1,8 @@
 2006-02-10  Per Bothner  <per@bothner.com>
 
+	* kawa/lang/Lambda.java (rewriteFormals): For anonymous functions
+	do setSourceLocation.
+
 	* kawa/standard/syntax_case.java (rewriteClauses): Fix to use
 	correct PrimProcedure constructor, taking a Language.
 
